<resources>
    <string name="app_name">1001 hadith</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="menu_tools">Sozlamalar</string>
    <string name="menu_night_mode">Tungi rejimi</string>
    <string name="menu_additionally">Qo\'shimcha</string>
    <string name="menu_about_us">Biz haqimizda</string>
    <string name="menu_rate">Baxolash</string>
    <string name="menu_share">Ulashish</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="back">Back</string>
    <string name="one_signal_id"></string>

    <!--Production-->
<!--        <string name="admob_id"></string>-->
<!--        <string name="admob_inter"></string>-->
<!--        <string name="BANNER_ID"></string>-->

    <!--Test-->
    <string name="admob_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_inter">ca-app-pub-3940256099942544/1033173712</string>
    <string name="BANNER_ID">ca-app-pub-3940256099942544/6300978111</string>

</resources>