<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigationView">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="@string/menu_additionally">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_about"
                android:title="@string/menu_about_us" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_rate"
                android:title="@string/menu_rate" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>